2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-08-15 Robin Cook <rcook@wyrms.net>
	* DETAILS: updated VERSION to 0.19
	  converted MD5 to GPG

2005-07-14 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DEPENDS: added dependency on libtool, bug #9216

2005-06-30 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: updated to 0.18.1
	* BUILD: fix configure.in so pkg-config doesn't look in the wrong path
	  for .pc files

2005-06-28 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 0.18.

2005-06-14 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DEPENDS: depends on automake
	* BUILD: run aclocal && autoconf in the main src dir and the glib
	  subdirectory, fixes bug #8957

2005-04-14 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 0.17.2.

2005-04-04 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 0.16.0; BUILD API 2.

2003-01-22 Julian v. Bock <julian@wongr.net>
	* DETAILS: set VERSION to 0.15.0.

2002-10-28 Julian v. Bock <julian@wongr.net>
	* DETAILS: set VERSION to 0.14.0.

2002-10-03 Julian v. Bock <julian@wongr.net>
	* DETAILS: add LICENSE and MD5 fields.

2002-09-22 Julian v. Bock <julian@wongr.net>
	* DETAILS: set VERSION to 0.13.0.

2002-07-02 Julian v. Bock <julian@wongr.net>
	* DETAILS: set VERSION to 0.12.0.
