@@ -1,0 +1,7 @@
+default_install  &&
+
+if install_config_file ${SCRIPT_DIRECTORY}/profile.d/pkgconfig.sh \
+                       ${INSTALL_ROOT}/etc/profile.d/pkgconfig.sh; then
+    chmod 0755 ${INSTALL_ROOT}/etc/profile.d/pkgconfig.sh
+fi
+
