@@ -1,3 +1,6 @@
+2006-07-23 Robin Cook <rcook@wyrms.net>
+	* INSTALL: added to install profile.d stript
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
